# web_applications_django

./: .gitignore  .sops.yaml  Dockerfile  README.md  docker-compose.yml  mykey_public.asc  mykey_secret.asc  pyproject.toml  secring.asc  secring.gpg
k8s/: configs.yaml  deployment.yaml  jobs.yaml  postgres-service.yaml  redis-statefulset.yaml  secrets.yaml  services.yaml  statefulset-postgresql.yaml
taskmanager/: backup_before_fk_fix.json  cert.crt  cert.key  docker-compose.yml  manage.py  qDddSQad  wsgi.py
taskmanager/accounts/: admin.py  backends.py  forms.py  models.py  services.py  urls.py  views.py
taskmanager/accounts/api/: security.py  views.py
taskmanager/accounts/migrations/: 0001_initial.py  0002_alter_organization_name.py  0003_remove_taskmanageruser_unique_organization_username_and_more.py  0004_authtoken.py  0005_alter_authtoken_token_alter_authtoken_user.py
taskmanager/health/: urls.py  views.py
taskmanager/mailhog-data/: 7Qmu2VhAcvug9s7wxljwY3KkQgNPntr9ycOvsOsmuTw=@mailhog.example
taskmanager/staticfiles/css/: style.css
taskmanager/taskmanager/: api.py  asgi.py  base.py  dev.py  production.py  settings.py  urls.py  wsgi.py
taskmanager/tasks/: admin.py  context_processors.py  converters.py  enums.py  fields.py  forms.py  maxins.py  middlewares.py  models.py  pagination.py  schemas.py  urls.py  views.py
taskmanager/tasks/api/: epics.py  sprints.py  tasks.py
taskmanager/tasks/migrations/: 0001_initial.py  0001_initial_squashed_0007_task_due_date_task_due_date_after_created_date.py  0002_alter_task_status.py  0003_fix_owner_foreign_key.py  0004_force_fk_to_custom_user.py  0005_fix_creator_relations.py  0006_remove_epic_sprints_epic_tasks_sprint_epic_and_more.py  0007_alter_epic_creator_alter_sprint_creator_and_more.py  0008_comments.py  0008_epic_sprints_task_priority.py  0009_rename_comments_comment.py  0009_subscribedemail.py  0010_alter_comment_options_alter_comment_author_and_more.py  0010_task_file_upload_task_image_upload.py  0011_formsubmission.py
taskmanager/tasks/services/: api_sprint_services.py  epic_services.py  services.py  sprint_services.py  task_services.py
taskmanager/templates/: _header.html
taskmanager/templates/accounts/: custom_password_reset_email.html  login.html  password_change.html  password_change_done.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_form.html  register.html  token_display.html
taskmanager/templatetags/: sprint_tags.py  tasks_filters.py
(+46 files in other folders)
