[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Leonardo Lazzaro <llazzaro@dc.uba.ar>"]
readme = "README.md"
packages = [{include = "task_manager"}]


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
psycopg = "^3.2.4"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
psycopg2-binary = "^2.9.10"
werkzeug = "^3.1.3"
djangorestframework = "^3.15.2"
django-storages = "^1.14.5"
boto3 = "^1.37.1"
markdown = "^3.7"
bleach = "^6.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
