[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = "A Django-based task management system."
authors = ["Siddhesh Parave <siddeshparave16@gmail.com>"]
readme = "README.md"
license = "UNLICENSE"
repository = "https://github.com/siddheshparave16/web_applications_django"

packages = [
    {include = "taskmanager", from = "taskmanager"},  # Main Django config
    {include = "accounts", from = "taskmanager"},     # Apps
    {include = "tasks", from = "taskmanager"}
]


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
psycopg = "^3.2.4"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
psycopg2-binary = "^2.9.10"
werkzeug = "^3.1.3"
djangorestframework = "^3.15.2"
django-storages = "^1.14.5"
boto3 = "^1.37.1"
markdown = "^3.7"
bleach = "^6.2.0"
django-widget-tweaks = "^1.5.0"
pillow = "^11.1.0"
django-redis = "^5.4.0"
pyopenssl = "^25.0.0"
django-csp = "^3.8"
argon2-cffi = "^23.1.0"
black = "^25.1.0"
django-ninja = "^1.4.0"
pyjwt = "^2.10.1"
django-ratelimit = "^4.1.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

